[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybin"
version = "0.1.0"
description = "A custom Python bytecode compiler producing .pybin files"
authors = [
    { name = "zimoshi", email = "153401092+zimoshi@users.noreply.github.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.scripts]
pybin = "pybin.org:main"
